# agent-extractor

./: .gitignore  README.md  SECURITY.md  extract_demo.py  mcp.json  pyproject.toml  requirements.txt
src/: __init__.py  engine.py  evaluator.py  extractor.py  mcp_server.py  renderer.py  schema.py  validator.py
tests/: test_engine.py  test_evaluator.py  test_extractor.py  test_mcp.py  test_renderer.py  test_validator.py
